# datasources-dev

./: .gitignore  0_topic_search.py  1_save_search_results_to_html_by_keyword.py  2_extract_and_save_program_links_from_html.py  3_scrape_funding_offer_links.py  README.md  foerderdatenbank_scraper.ipynb  pyproject.toml  readme_scrape_all.txt  rss_scraper.ipynb  scraper.py
data/: funding_programs.csv
foerderdatenbank/: .gitignore  0_topic_search.py  3_scrape_funding_offer_links.py  README.md  foerderdatenbank_scraper.ipynb  rss_scraper.ipynb
foerderdatenbank/data/: program_links.txt
pvog/: 0_extract_ars.py  1_download_csvs.py  2_distinct_ids.py  3_download_jzufis.py  4_gueltigkeitGebietID.py  README.md  ars00.py  ars00_1.py  ars00_2.py  leikaid-to-ars.py
sozialplattform/: 0_extract_leika-ids.py  1_download_files.py  1_prepare_info_extraction.py  2_extract_infos.py  README.md  by-leistung.txt  by-topic.txt  social-benefits-finder.json  sozialleistungsfinder-fragen.txt  sozialleistungsfinder-missing-data.txt
